web commit by VictorMoral

--- a/doc/plugins/contrib/syntax.mdwn
+++ b/doc/plugins/contrib/syntax.mdwn
@@ -2,6 +2,7 @@
 [[tag type/chrome type/slow]]
 [[meta title="syntax (third-party plugin)"]]
 
+
 `syntax` is a plugin that add support to ikiwiki for syntax highlighting through the *vim* editor and its perl interface [[cpan Text::VimColor]], so it depends on a vim functional installation.
 
 The plugin inserts a fragment of HTML with special marks from a file or a string text. It accepts the following parameters:
@@ -10,6 +11,7 @@ The plugin inserts a fragment of HTML with special marks from a file or a string
 * **file**: Path to the source file. It must exist on every rebuild of the wiki.
 * **text**: Text string with the source.
 * **description** (optional): little description about the content.
+* **linenumbers** (optional): enable the line numering of the source page. A value greater than zero is the first line number.
 
 The params *file* and *text* are mutually exclusive.
 
@@ -24,7 +26,7 @@ Example:
 
 or 
 
-       \[[syntax file="hello.pl" description="My first perl program"]]
+       \[[syntax file="/examples/hello.pl" description="My first perl program"]]
 
 This plugin create the following CSS styles:
 
@@ -44,3 +46,11 @@ It can be downloaded from [here](http://taquiones.net/files/misc/IkiWiki-Plugin-
 
 Any help, comments or critics are welcome at <victor@taquiones.net>.
 
+## version 0.7
+
+- Version change to GPL
+- Add *linenumbers* parameter
+- The *file* parameter should be point to a ikiwiki source page. 
+- The *description* parameter will be converted on a URL if the *file* parameter exist.
+
+I need help for debugging this module. Thanks in advance.
