web commit by ScottHenson

--- a/doc/bugs/Disappearing_Pages.mdwn
+++ b/doc/bugs/Disappearing_Pages.mdwn
@@ -17,3 +17,5 @@ to be the use of sidebars and google calendar in the affected wiki.
 
 > Could you post a tarball of the wiki and any setup file you use somewhere
 > so I can try to reproduce your problem? --[[Joey]]
+>>[The Wiki](http://www.lcsee.wvu.edu/~scotth/sysstaff.tar.gz) 
+>> I think it has something to do with the plugin selection. --[[ScottHenson]]
