web commit by ScottHenson

--- a/doc/bugs/Disappearing_Pages.mdwn
+++ b/doc/bugs/Disappearing_Pages.mdwn
@@ -25,3 +25,8 @@ to be the use of sidebars and google calendar in the affected wiki.
 >>> However, I that uninitialized value come from an inline directive,
 >>> and the wiki source doesn't seem to use inlining at all, so I'm confused
 >>> about that. --[[Joey]]
+
+>>>> Sorry, thats my fault.  The wiki that was having the problem had some 
+>>>> information that I couldn't distribute.  So I reproduced the bug on 
+>>>> another wiki and sent you that.  Those warnings don't seem to have any 
+>>>> effect on the disappearing content.  Sorry for the confusion.  --[[ScottHenson]]
