--- a/debian/changelog
+++ b/debian/changelog
@@ -11,8 +11,9 @@ ikiwiki (1.31) UNRELEASED; urgency=low
   * Sanitize possibly problimatic characters out of the polygen grammar names,
     just in case. Should not be exploitable anyway, since it only tries to run
     polygen after finding the specified grammar file.
+  * Add missing dependency on the URI perl module.
 
- -- Joey Hess <joeyh@debian.org>  Sun, 22 Oct 2006 15:47:08 -0400
+ -- Joey Hess <joeyh@debian.org>  Fri, 27 Oct 2006 13:10:49 -0400
 
 ikiwiki (1.30) unstable; urgency=low
 
